k8s/apps/dumb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dumb
  labels:
    app: dumb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dumb
  template:
    metadata:
      labels:
        app: dumb
    spec:
      containers:
        - name: dumb
          image: ghcr.io/rramiachraf/dumb:latest@sha256:de231df0313999b834b5ccc7cf0b5d426fc6b42bfdd984f7f7c322b3d9db3907
          ports:
            - containerPort: 5555
          resources:
            requests:
              memory: 96Mi
            limits:
              memory: 160Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
