k8s/apps/dumb/dumb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dumb
spec:
  selector:
    app: dumb
  ports:
    - port: 5555
      targetPort: 5555
